[sphere_defs.scp]: Added new char flag 'statf_freezecast' to make the char unable to walk while casting spells (used by MAGICF_FREEZEONCAST magic flag on sphere.ini)
[sphere_dialog.scp]: Added support for 'statf_freezecast' char flag on character properties dialog

13-01-2020, Coruja
Added: 64bit architecture support on Sphere
	-32bit/64bit builds are compiled separately but are compatible with each other and share the same source code / script pack
	-NOTE: To switch between 32bit/64bit build you must also switch MySQL client library to the version compatible with selected arch
		-Windows: replace 'libmysql.dll' file with the version included on downloaded zip
		-Linux: replace MySQL package (Ubuntu: 'libmysqlclient20' to 64bit or 'libmysqlclient20:i386' to 32bit / CentOS: 'mysql-community-libs' to 64bit or 'mysql-community-libs.i686' to 32bit)

17-01-2020, Coruja
Added: New EMOTECOLOR char property (read-only) to store emote color received from client (':+space' client shortcut)

19-01-2020, Coruja
Fixed: Function TIMERF not setting the timer correctly.
Changed: Worldsave now will save all multis on 'spheremultis.scp' file instead of only customizable houses.

25-01-2020, Coruja
Changed: Misc optimizations on internal variables engine.
	-This should give a big performance boost to load files at server startup
	-Ported from SphereX branch, credits to Nolok

29-01-2020, Coruja
Fixed: Console not throwing some specific exception errors when the exception occur.

20-02-2020, Coruja
Fixed: Function UNEXTRACT making server crash.
Changed: Equipped items now will update timer using TIMERD (10x per sec) instead TIMER (1x per sec).
[sphereCrypt.ini]: Added crypt key for classic client 7.0.84 and enhanced client 4.0.84

24-02-2020, Coruja
Added: Support for function MAPWAYPOINT on classic clients >= 7.0.84.0.
	-NOTE: Enhanced clients support all waypoint types, but classic clients only support type 0 (remove) and 6 (healer)