@@ -1220,13 +1220,6 @@ bool CItemContainer::CanContainerHold(const CItem *pItem, const CChar *pCharMsg)
 		}
 	}
 
-	if ( !IsItemEquipped() && pItem->IsContainer() && (pItem->Item_GetDef()->GetVolume() >= Item_GetDef()->GetVolume()) )
-	{
-		// Is the container too small? Can't put barrels inside barrels
-		pCharMsg->SysMessageDefault(DEFMSG_CONT_TOOSMALL);
-		return false;
-	}
-
 	switch ( GetType() )
 	{
 		case IT_EQ_BANK_BOX:
@@ -1292,13 +1285,6 @@ bool CItemContainer::CanContainerHold(const CItem *pItem, const CChar *pCharMsg)
 			if ( !pItem->Item_GetDef()->GetMakeValue(0) )
 			{
 				pCharMsg->SysMessageDefault(DEFMSG_MSG_ERR_NOT4SALE);
-				return false;
-			}
-
-			// Check if this vendor box hasn't already reached its content limit
-			if ( GetCount() >= MAX_ITEMS_CONT )
-			{
-				pCharMsg->SysMessageDefault(DEFMSG_CONT_FULL);
 				return false;
 			}
 			break;
